--- a/app/package.json
+++ b/app/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "@headlessui/react": "^2.1.10",
     "@heroicons/react": "^2.1.5",
+    "date-fns": "^4.1.0",
     "framer-motion": "^11.11.8",
     "lucide-react": "^0.452.0",
     "path": "^0.12.7",
     "react": "^18.3.1",
+    "react-datepicker": "^7.4.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
     "zustand": "^5.0.0-rc.2"
