--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,10 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^5.20.0",
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
+    "axios": "^1.7.7",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "postgres": "^3.4.4",
