--- a/app/package.json
+++ b/app/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@headlessui/react": "^2.1.10",
     "@heroicons/react": "^2.1.5",
+    "@tailwindcss/forms": "^0.5.9",
     "axios": "^1.7.7",
     "date-fns": "^4.1.0",
     "framer-motion": "^11.11.8",
