--- a/app/package.json
+++ b/app/package.json
@@ -12,20 +12,33 @@
   "dependencies": {
     "@headlessui/react": "^2.1.10",
     "@heroicons/react": "^2.1.5",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-slot": "^1.1.0",
     "@tailwindcss/forms": "^0.5.9",
+    "@types/react-date-range": "^1.4.9",
     "axios": "^1.7.7",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "cobe": "^0.6.3",
     "date-fns": "^4.1.0",
     "framer-motion": "^11.11.8",
     "lucide-react": "^0.452.0",
     "path": "^0.12.7",
     "react": "^18.3.1",
+    "react-date-range": "^2.0.1",
     "react-datepicker": "^7.4.0",
+    "react-day-picker": "^9.1.4",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
+    "react-spring": "^9.7.4",
+    "react-tailwindcss-datepicker": "^1.7.2",
+    "tailwind-merge": "^2.5.4",
+    "tailwindcss-animate": "^1.0.7",
     "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
+    "@types/node": "^22.7.6",
     "@types/react": "^18.3.10",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.2",
